# multitap

./: .gitignore  Cargo.toml  build-all  pom.xml
conf/adapters/DS4/: Gamepad.ron
conf/adapters/DS4G/: Gamepad.ron  Keyboard.ron
conf/adapters/GameCubeMF/: Gamepad.ron
conf/adapters/JoyCon/Combined/: Gamepad.ron
conf/adapters/JoyCon/Left/: Gamepad-Horizontal.ron  Gamepad-Vertical.ron
conf/adapters/JoyCon/Right/: Gamepad-Horizontal.ron  Gamepad-Vertical.ron
conf/adapters/Steam/: Gamepad.ron
conf/adapters/SwitchPro/: Citra.ron  Gamepad.ron
conf/adapters/Xbox/: Gamepad.ron
conf/devices/: DS4.ron  DS4G.ron  GameCubeMF.ron  Steam.ron  SwitchPro.ron  Xbox.ron
conf/devices/JoyCon/: Left.ron  Right.ron
conf/ports/: Gamepad.ron  Keyboard.ron  Mouse.ron
multitap-cli/: Cargo.toml
multitap-cli/src/: main.rs
multitap-core/: Cargo.toml
multitap-core-evdev/: Cargo.toml  build.rs
multitap-core-evdev/constants/: evdev-constants.py
multitap-core-evdev/src/: ids.rs  lib.rs
multitap-core/src/: error.rs  input.rs  lib.rs  protocol.rs
multitap-core/src/config/: adapter.rs  device.rs  mod.rs  port.rs
multitap-daemon/: Cargo.toml
multitap-daemon-android/: Cargo.toml
multitap-daemon-android/src/: lib.rs
multitap-daemon-core/: Cargo.toml
multitap-daemon-core/src/: lib.rs
multitap-daemon-core/src/eventloop/: error.rs  mod.rs  sources.rs
multitap-daemon-evdev/: Cargo.toml
multitap-daemon-evdev/src/: convert.rs  lib.rs  phys.rs  virt.rs
multitap-daemon-evdev/src/eventloop/: error.rs  mod.rs
multitap-daemon-linux/: Cargo.toml
multitap-daemon-linux/src/: lib.rs
multitap-daemon-signals/: Cargo.toml
multitap-daemon-signals/src/: error.rs  lib.rs
multitap-daemon-udev/: Cargo.toml
multitap-daemon-udev/src/: error.rs  lib.rs
multitap-daemon-uds/: Cargo.toml
multitap-daemon-uds/src/: error.rs  lib.rs
multitap-daemon-uevent/: Cargo.toml
multitap-daemon-uevent/src/: error.rs  lib.rs
multitap-daemon/src/: autoplug.rs  device.rs  error.rs  main.rs  port.rs
multitap-daemon/src/daemon/: devices.rs  events.rs  mod.rs  plugs.rs  ports.rs
multitap-daemon/src/plug/: mod.rs  table.rs
multitap-daemon/src/plug/transform/: axis.rs  key.rs  mod.rs  motion.rs
multitap-ui/: pom.xml
multitap-ui-core/: Cargo.toml
multitap-ui-core/src/: client.rs  lib.rs  tray.rs
multitap-ui/src/main/java/fr/yusaku/multitap/ui/: ControllerIcon.java  Log.java  MultitapUI.java  PortNode.java
multitap-ui/src/main/java/fr/yusaku/multitap/ui/core/: Client.java  ClientCallbacks.java  Core.java  CoreLibFeature.java  JNICallback.java  Tray.java  TrayCallbacks.java
multitap-ui/src/main/java/fr/yusaku/multitap/ui/protocol/: Callbacks.java  DeviceRefDef.java  Event.java  PortRefDef.java  package-info.java
multitap-ui/src/main/resources/fr/yusaku/multitap/ui/: styles.css
