[package]
name = "multitap-daemon-evdev"
version = "0.0.1"
authors = ["yusakufujikifr"]
edition = "2018"

[dependencies]
snafu = "~0.6.10"

multitap-core        = { path = "../multitap-core" }
multitap-core-evdev  = { path = "../multitap-core-evdev" }
multitap-daemon-core = { path = "../multitap-daemon-core" }

nix = "~0.19.1"
mio = { version = "~0.7.7", features = ["os-poll", "os-ext", "net"] }
evdev-rs = { path = "../../evdev-rs" }
