[package]
name = "multitap-daemon-uevent"
version = "0.0.1"
authors = ["yusakufujikifr"]
edition = "2018"

[dependencies]
multitap-core         = { path = "../multitap-core" }
multitap-daemon-core  = { path = "../multitap-daemon-core" }
multitap-daemon-evdev = { path = "../multitap-daemon-evdev" }

nix = { git = "https://github.com/SnowRabbit2/nix", branch = "android-timerfd" }
mio = { version = "~0.7.7", features = ["os-poll", "os-ext", "net"] }
